--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -26,5 +26,30 @@
 			"service": "Lambda",
 			"dependsOn": []
 		}
+	},
+	"api": {
+		"mybookstore": {
+			"service": "AppSync",
+			"providerPlugin": "awscloudformation",
+			"output": {
+				"authConfig": {
+					"additionalAuthenticationProviders": [
+						{
+							"authenticationType": "API_KEY",
+							"apiKeyConfig": {
+								"description": "Guest user access to books",
+								"apiKeyExpirationDays": 365
+							}
+						}
+					],
+					"defaultAuthentication": {
+						"authenticationType": "AMAZON_COGNITO_USER_POOLS",
+						"userPoolConfig": {
+							"userPoolId": "authmybookstore3cff28fa"
+						}
+					}
+				}
+			}
+		}
 	}
 }
